--- a/Employees/templates/Employees/common/header.html
+++ b/Employees/templates/Employees/common/header.html
@@ -55,7 +55,7 @@
          <div class="col-xl-2 col-lg-2 col-md-2">
             <div class="profileDropdown">
                <button type="button">
-                  <img class="img-fluid" src="{{ STATIC_URL }}static/edit_download_module/img/user.png" alt="">
+                  <img class="img-fluid" src="{{ obj.profile_picture.url }}" alt="">
                   <h4>Me</h4>
                </button>
                <div class="profileHover">
