--- a/Employees/templates/Employees/common/edit_skeleton.html
+++ b/Employees/templates/Employees/common/edit_skeleton.html
@@ -50,6 +50,9 @@
   <script src="{{ STATIC_URL }}static/edit_download_module/js/plugin/jquery.validate.min.js"></script>
   <script src="{{ STATIC_URL }}static/edit_download_module/js/plugin/additional-methods.min.js"></script>
   <script src="{{ STATIC_URL }}static/edit_download_module/js/form-validation.js"></script>
+  <script src="{{ STATIC_URL }}static/edit_download_module/js/plugin/js/oauth.js"></script>
+  <script src="{{ STATIC_URL }}static/edit_download_module/js/plugin/js/oauth.min.js"></script>
+  
 
   <script>
      $('#allCheck').change(function(){
