--- a/SuperPanel/templates/SuperPanel/resetPassword.html
+++ b/SuperPanel/templates/SuperPanel/resetPassword.html
@@ -22,7 +22,7 @@
 
    <!-- start recover pass popup -->
    <div id="forgote-pass-popup">
-      <!-- <div class="modal fade" id="forgotpass-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"> -->
+      <div class="modal fade" id="forgotpass-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
          <div class="modal-dialog modal-lg modal-dialog-centered">
            <div class="modal-content">
              <div class="forgot-pass-content text-center">
@@ -43,7 +43,7 @@
                        </div>
                       </div>
                       <div class="action-btn">
-                         <button type="button" id="recover_pass" class="cbtn">RECOVER PASSWORD</button>
+                         <button type="button" class="cbtn">RECOVER PASSWORD</button>
                       </div>
                    </form>
                 </div>
@@ -63,7 +63,7 @@
 
    <!-- start set new password popup -->
    <div id="setNew-passPopup">
-      <div class="modal fade" id="setnewpass-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <!-- <div class="modal fade" id="setnewpass-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"> -->
          <div class="modal-dialog modal-lg modal-dialog-centered">
            <div class="modal-content">
              <div class="set-newpassModal-content text-center">
@@ -93,13 +93,13 @@
                              <i class="far fa-eye-slash"></i>
                            </button>
                         </div>
-                        <div class="setpassword-form-error">
+                        <div id="span_11" class="setpassword-form-error" style="display:none">
                            Password Does Not Match
                         </div>
                      </div>
 
                       <div class="form-submit-btn text-center">
-                         <button type="button" class="cbtn">CONTINUE</button>
+                         <button type="button" id="recover_pass" class="cbtn">CONTINUE</button>
                       </div>
                      </div>
                   </form>
@@ -107,7 +107,7 @@
              </div>
            </div>
          </div>
-       </div>
+       <!-- </div> -->
    </div>
    <!-- end set new password popup -->
 
@@ -118,29 +118,35 @@
    <script>
      $(function(){
        $("#recover_pass").click(function(){
-         $.ajax({
-              url: "/superpanel/forgot-password",
-              type: 'PUT',
-              headers: {
-                          'Content-Type':'application/json',
-                          'X-CSRFToken': "{{ csrf_token }}"
-              },
-              data: JSON.stringify({
-                'email': $("#curr_email").val()
-              }),
-              success: function(data) {
-                console.log(data);
-                if(data.status==="error"){
-                  $("#my_span1").css("display", "block");
+         if($("#passwordFild3").val() === $("#passwordFild4").val()){
+           $.ajax({
+                url: "/superpanel/getLink{{ link }}",
+                type: 'PUT',
+                headers: {
+                            'Content-Type':'application/json',
+                            'X-CSRFToken': "{{ csrf_token }}"
+                },
+                data: JSON.stringify({
+                  'password': $("#passwordFild3").val()
+                }),
+                success: function(data) {
+                  console.log(data);
+                  if(data.status==="error"){
+                    alert("Some Error Occured!! Please Try Again!!")
+                  }
+                  else if(data.status==="success"){
+                    alert("Password Reset Suucessfully!!")
+                    window.location.href="/superpanel/login";
+                  }
+                  else{
+                    alert("Some Error Occured!! Please Try Again!!")
+                  }
                 }
-                else if(data.status==="success"){
-                  $("#emailinboxPopup").modal('toggle')
-                }
-                else{
-                  alert("Some Error Occured!! Please Try Again!!")
-                }
-              }
-            });
+              });
+          }
+          else{
+            $("#span_11").css("display", "block");
+          }
        })
      })
    </script>
