--- a/Employees/templates/Employees/edit_profile.html
+++ b/Employees/templates/Employees/edit_profile.html
@@ -195,7 +195,7 @@
                      </div>
                      <!-- end contact details area -->
                      <!-- start connection details -->
-                     <div id="connectiondetailsForm" class="formItemBox">
+                     <!-- <div id="connectiondetailsForm" class="formItemBox">
                         <div class="editFormComonTop text-center">
                            <div class="itemTopIcon">
                               <img class="img-fluid" src="{{ STATIC_URL }}static/edit_download_module/img/icons/globe-grid.png" alt="">
@@ -217,7 +217,7 @@
                                  </div>
                               </div>
 
-                              <!-- Not Available -->
+
                               <div class="col-xl-4 col-lg-4 col-md-6">
                                  <div class="inputBox">
                                     <input type="text" value = "{{ obj.third_party_connection_details.instagram }}"  name="insLink" placeholder="Enter Profile URL">
@@ -268,7 +268,7 @@
                                  </div>
                               </div>
 
-                              <!-- Not Available -->
+
                               <div class="col-xl-4 col-lg-4 col-md-6">
                                  <div class="inputBox">
                                     <input type="text" value = "{{ obj.third_party_connection_details.dribble }}" name="dribbleLink" placeholder="Enter Profile URL">
@@ -279,7 +279,7 @@
                                  </div>
                               </div>
 
-                              <!-- Not Available -->
+
                               <div class="col-xl-4 col-lg-4 col-md-6">
                                  <div class="inputBox">
                                     <input type="text" value = "{{ obj.third_party_connection_details.behance }}" name="behanceLink" placeholder="Enter Profile URL">
@@ -290,7 +290,7 @@
                                  </div>
                               </div>
 
-                              <!-- Not Available -->
+
                               <div class="col-xl-4 col-lg-4 col-md-6">
                                  <div class="inputBox">
                                     <input type="text" value = "{{ obj.third_party_connection_details.pinterest }}" name="pinLink" placeholder="Enter Profile URL">
@@ -311,7 +311,7 @@
                                  </div>
                               </div>
 
-                              <!-- Not Available -->
+
                               <div class="col-xl-4 col-lg-4 col-md-6">
                                  <div class="inputBox">
                                     <input type="text" value = "{{ obj.third_party_connection_details.telegram }}" name="teleGranLink" placeholder="Enter Profile URL">
@@ -333,7 +333,7 @@
                               </div>
                            </div>
                         </div>
-                     </div>
+                     </div> -->
                      <!-- end connection details -->
                      <!-- start address form area -->
                      <div id="addressdetailsForm" class="formItemBox">
@@ -633,7 +633,7 @@
 
    <!-- all javascript load here -->
    {% block script_body %}
-   <script>
+   <!-- <script>
      $(function(){
        OAuth.initialize('yKHWiD6q8G1M3MEpPKTip0QXMks')
 
@@ -693,5 +693,5 @@
           });
       	});
    });
-   </script>
+   </script> -->
    {% endblock %}
