--- a/Employees/templates/Employees/download_profile.html
+++ b/Employees/templates/Employees/download_profile.html
@@ -86,7 +86,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="profileInfoAreaItem">
+                        <!-- <div class="profileInfoAreaItem">
                            <div class="toparea text-center">
                               <h3>Connect With Me</h3>
                            </div>
@@ -166,7 +166,7 @@
                                  </div>
                               </div>
                            </div>
-                        </div>
+                        </div> -->
                         <div class="profileInfoAreaItem">
                            <div class="toparea text-center">
                               <h3>Payment Details</h3>
