--- a/SuperPanel/templates/SuperPanel/common/home_skeleton.html
+++ b/SuperPanel/templates/SuperPanel/common/home_skeleton.html
@@ -20,9 +20,23 @@
    <link rel="stylesheet" href="{{ STATIC_URL }}static/home_module/css/style.css">
    <link rel="stylesheet" href="{{ STATIC_URL }}static/home_module/css/custom.css">
    <link rel="stylesheet" href="{{ STATIC_URL }}static/home_module/css/responsive.css">
+   <link rel="stylesheet" href="{{ STATIC_URL }}static/home_module/css/before_login.css">
    <!-- this is for mordanizar js link -->
    <script src="{{ STATIC_URL }}static/home_module/js/vendor/modernizr-3.6.0.min.js"></script>
-
+   <style>
+   .my_signin {
+      top: 87px;
+      left: 1730px;
+      width: 98px;
+      height: 36px;
+      text-align: left;
+      text-decoration: underline;
+      font: normal normal bold 30px/36px Helvetica Neue LT Std;
+      letter-spacing: 0px;
+      color: #000000;
+      opacity: 1;
+    }
+  </style>
    {% block css_body %}
    {% endblock %}
 </head>
